infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: heshamazmy2015/payment-image
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv

spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 4003
      targetPort: 4003
