infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ticket-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: heshamazmy2015/ticket-image
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv

spec:
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 4003
      targetPort: 4003
